<resources>
    <string name="app_name">UAFinance</string>
    <string name="title_activity_finance">UAFinance</string>

    <string-array name="askbid">
        <item>Покупка</item>
        <item>Продажа</item>
    </string-array>
    <string name="default_city">Киев</string>
    <string name="default_currancie">USD</string>

    <string name="title_activity_organization">Организация</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="main_currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>RUB</item>
    </string-array>

    <string name="USD">USD</string>
    <string name="RUB">RUB</string>
    <string name="RUR">RUR</string>
    <string name="EUR">EUR</string>
    <string name="organization_title">Название:</string>
    <string name="organization_region">Регион:</string>
    <string name="organization_city">Город:</string>
    <string name="organization_adress_text">Адресс</string>
    <string name="currancie">Валюта</string>
    <string name="ask">Покупка</string>
    <string name="bid">Продажа</string>
    <string name="nullvall">0.0</string>
    <string name="telephone">Телефон</string>
    <string name="grivna">ГРН</string>
    <string name="FindLatLonError">\n Unable to get Latitude and Longitude for this address location.</string>
    <string name="serverKey">AIzaSyCN-atwyMdbfyAW3FKeHlCGb7aSn8sY4Ew</string>
    <string name="NBU_metall">Металл</string>
    <string name="NBU_met_cour">1 тр.унция(31.1 г.)</string>
    <string name="Gold_rus">Золото</string>
    <string name="Gold">Au</string>
    <string name="Gold_key">XAU</string>
    <string name="Silver_rus">Серебро</string>
    <string name="Silver">Ag</string>
    <string name="Silver_key">XAG</string>
    <string name="Platina_rus">Платина</string>
    <string name="Platina">Pt</string>
    <string name="Platina_key">XPT</string>
    <string name="Palladiy_rus">Палладий</string>
    <string name="Palladiy">Pd</string>
    <string name="Palladiy_key">XPD</string>

    <string name="CurrencyCash">Наличные</string>
    <string name="InterBank">Межбанк</string>
    <string name="PreciousMetals">Драг.Металл</string>
    <string name="blackMarket">Черн.рынок</string>
    <string name="NBU">НБУ</string>

    <string name="km">км</string>
    <string name="openNavView">открыто</string>
    <string name="closeNawView">закрыто</string>
    <string name="navmenu_map">Карта</string>
    <string name="navmenu_cur">Сортировка по курсу</string>
    <string name="navmenu_dist">Сортировка по расстоянию</string>
    <string name="navmenu_opt">Настройки</string>
    <string name="mapActivityName">Карта</string>
    <string name="kerbstone_market_financeua">Черный рынок валюты (Finace.UA)</string>
    <string name="kerbstone_market_finance_i">Черный рынок валюты (Finace.i.ua)</string>
    <string name="kerbstone_market">Черный рынок валюты</string>
    <string name="kerbstone_finance_ua_URL">http://miniaylo.finance.ua/ru/</string>
    <string name="kerbstone_finance_i_URL">http://finance.i.ua/market/kiev/</string>
    <string name="notification_service">UAFinance notifications</string>
    <string name="preferences_label">Настройки</string>
    <string name="phone_is_not_available">Телефон не доступен</string>
    <string name="navmenu_about">Описание</string>
    <string name="curVersion">"Текущая версия программы: "</string>
    <string name="course">Курс</string>
    <string name="distance">Расстояние</string>


</resources>
