<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/navmenu_cur"
                android:checked="true"

                android:title="@string/navmenu_cur" />
            <item
                android:id="@+id/navmenu_dist"
                android:checked="false"
                android:title="@string/navmenu_dist" />
        </group>
        <item
            android:id="@+id/navmenu_map"


            android:title="@string/navmenu_map" />
        <item
            android:id="@+id/navmenu_opt"

            android:title="@string/navmenu_opt" />
        <!--
        <item android:title="List 1">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/subitem_1"
                        android:title="SubItem 1" />
                    <item
                        android:id="@+id/subitem_2"
                        android:title="SubItem 2" />
                </group>
            </menu>
        </item>
        -->
    </group>
</menu>