<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <GridLayout
        android:id="@+id/curGridLayout"
        style="@style/hiderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="3">


        <TextView
            android:id="@+id/bid"
            style="@style/hiderBlackTextStyle"
            android:text="@string/ask" />


        <TextView
            style="@style/hiderBlackTextStyle"
            android:text="@string/currancie" />


        <TextView
            android:id="@+id/ask"
            style="@style/hiderBlackTextStyle"

            android:text="@string/bid" />
        <!--   USD    -->


        <TextView
            android:id="@+id/USD_bid"
            style="@style/hiderBlackTextStyle"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/nullvall" />

        <TextView
            android:id="@+id/USD_cur_name"
            style="@style/hiderRedTextStyle"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/USD" />

        <TextView
            android:id="@+id/USD_ask"
            style="@style/hiderBlackTextStyle"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/nullvall" />

        <!--   EUR    -->


        <TextView
            android:id="@+id/EUR_bid"
            style="@style/hiderBlackTextStyle"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/nullvall" />

        <TextView
            android:id="@+id/EUR_cur_name"
            style="@style/hiderRedTextStyle"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/EUR" />

        <TextView
            android:id="@+id/EUR_ask"
            style="@style/hiderBlackTextStyle"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/nullvall" />

        <!--   RUB    -->

        <TextView
            android:id="@+id/RUB_bid"
            style="@style/hiderBlackTextStyle"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/nullvall" />

        <TextView
            android:id="@+id/RUB_cur_name"
            style="@style/hiderRedTextStyle"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/RUB" />

        <TextView
            android:id="@+id/RUB_ask"
            style="@style/hiderBlackTextStyle"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/nullvall" />

    </GridLayout>

</LinearLayout>