<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:background="@drawable/layout_bg"
    android:padding="@dimen/activity_horizontal_margin">
    <!-- USD  android:background="@color/uaflighthiderback" -->
    <TextView
        android:id="@+id/USD_bid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/nullvall"
        android:textColor="@color/uafblack"

        android:textSize="@dimen/midl_text_size" />

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/USD_iv"
            android:layout_width="@dimen/midl_text_size"
            android:layout_height="@dimen/midl_text_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"


            android:src="@mipmap/usapng" />

        <TextView
            android:id="@+id/USD_cur_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/midl_text_size"
            android:layout_alignParentRight="true"
            android:textColor="@color/uafredtext"

            android:text="@string/USD" />


    </RelativeLayout>

    <TextView
        android:id="@+id/USD_ask"
        android:textColor="@color/uafblack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/nullvall"
        android:textSize="@dimen/midl_text_size" />


    <!-- EUR -->
    <TextView
        android:id="@+id/EUR_bid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/nullvall"
        android:textColor="@color/uafblack"

        android:textSize="@dimen/midl_text_size" />

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/EUR_iv"
            android:layout_width="@dimen/midl_text_size"
            android:layout_height="@dimen/midl_text_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"


            android:src="@mipmap/europapng" />

        <TextView
            android:id="@+id/EUR_cur_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/midl_text_size"
            android:layout_alignParentRight="true"
            android:textColor="@color/uafredtext"

            android:text="@string/EUR" />


    </RelativeLayout>

    <TextView
        android:id="@+id/EUR_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/nullvall"
        android:textColor="@color/uafblack"
        android:textSize="@dimen/midl_text_size" />


    <!-- RUB -->
    <TextView
        android:id="@+id/RUB_bid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/uafblack"
        android:text="@string/nullvall"

        android:textSize="@dimen/midl_text_size" />

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/RUB_iv"
            android:layout_width="@dimen/midl_text_size"
            android:layout_height="@dimen/midl_text_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"


            android:src="@mipmap/russiapng" />

        <TextView
            android:id="@+id/RUB_cur_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/midl_text_size"
            android:layout_alignParentRight="true"
            android:textColor="@color/uafredtext"
            android:text="@string/RUB" />


    </RelativeLayout>

    <TextView
        android:id="@+id/RUB_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/nullvall"
        android:textColor="@color/uafblack"
        android:textSize="@dimen/midl_text_size" />




    <!--
    style="@style/hiderLightStyle"
    android:background="@drawable/layout_bg"-->




</RelativeLayout>